# Forenaide

./: .gitignore  README.md  setup.ps1  setup.sh
WxTestingStuffOut/: app.py  functions.py  requirements.txt
backend/api/: Dockerfile  app.py  client.py  deps.py  lifespans.py  pyproject.toml  requirements.txt
backend/api/bucket/: outputs.py  sources.py
backend/api/classes/: classes.py
backend/api/classes/environ/: __init__.py
backend/api/message/: connection.py
backend/api/pipeline/: pipelines.py
backend/api/strategy/: strategies.py
backend/api/template/: templates.py
backend/api/tests/test_routes/: conftest.py  test_pipeline_runs.py  test_template.py
backend/worker/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/worker/pipeline/: __init__.py
backend/worker/pipeline/base/: __init__.py  pipeline.py  pipeline_step.py
backend/worker/pipeline/extractor/: claude_extractor.py  ollama_extractor.py  openai_extractor.py
backend/worker/pipeline/extractor/text/: ocr_extractor.py
backend/worker/pipeline/file/: __init__.py  gotenberg_step.py
backend/worker/pipeline/image/: pdf_to_jpg_step.py
backend/worker/pipeline/message/: consumer.py
backend/worker/pipeline/model/: ImageInputModel.py  PipelineModel.py  QueueMessageModel.py  SchemaModel.py  StepDataModel.py  StrategyModel.py  TextInputModel.py  __init__.py
backend/worker/pipeline/model/environ/: Environ.py
backend/worker/pipeline/processor/: message_processor.py
backend/worker/pipeline/queue/: consumer.py
backend/worker/pipeline/router/: file_strategy_router.py
(+94 files in other folders)
