[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.8",
    "gotrue>=2.11.3",
    "pika>=1.3.2",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "python-multipart>=0.0.20",
    "supabase>=2.12.0",
    "uvicorn>=0.34.0",
]
