[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.43.0",
    "httpx>=0.28.1",
    "openai>=1.59.7",
    "pdf2image>=1.17.0",
    "pika>=1.3.2",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "pytesseract>=0.3.13",
    "supabase>=2.13.0",
]
